--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "projetecoride",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "server.js", 
   "scripts": {
+    "start": "node server.js", 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.5.0",
