Finalisation du .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
-MONGO_URI=
+# Configuration pour la base de données MongoDB (remplacer par votre URI Atlas ou locale)
+MONGO_URI=mongodb+srv://user:password@cluster_address/retryWrites=true&w=majority&appName=AppName
+
+# Configuration pour la base de données MySQL
 MYSQL_HOST=localhost
-MYSQL_USER=
-MYSQL_PASSWORD=
+MYSQL_USER=root
+MYSQL_PASSWORD=votre_mot_de_passe_mysql
 MYSQL_DATABASE=ecoride
+
+# Port sur lequel le serveur Node.js va tourner
 PORT=4000
+
+# Clé secrète pour sécuriser les sessions (remplacer par une longue chaîne aléatoire)
+SESSION_SECRET=votre_cle_secrete_ici
